syntax = "proto3";

package HelloworldService;
option csharp_namespace = "HelloworldService";

service HelloWorld {
    rpc Echo (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}